@@ -1,6 +1,6 @@
 <?php
 const PLX_ROOT = './';
-const PLX_CORE = PLX_ROOT .'core/';
+define('PLX_CORE', PLX_ROOT .'core/');
 
 include PLX_ROOT.'config.php';
 include PLX_CORE.'lib/config.php';
