@@ -1,6 +1,6 @@
 <?php
 const PLX_ROOT = './';
-const PLX_CORE = PLX_ROOT .'core/';
+define('PLX_CORE', PLX_ROOT .'core/');
 
 include(PLX_ROOT.'config.php');
 include(PLX_CORE.'lib/config.php');
@@ -12,14 +12,9 @@ if(!file_exists(path('XMLFILE_PARAMETERS'))) {
 }
 
 # On inclut les librairies nécessaires
-include(PLX_CORE.'lib/class.plx.date.php');
-include(PLX_CORE.'lib/class.plx.glob.php');
-include(PLX_CORE.'lib/class.plx.utils.php');
-include(PLX_CORE.'lib/class.plx.capcha.php');
-include(PLX_CORE.'lib/class.plx.erreur.php');
-include(PLX_CORE.'lib/class.plx.record.php');
-include(PLX_CORE.'lib/class.plx.motor.php');
-include(PLX_CORE.'lib/class.plx.plugins.php');
+foreach(explode(' ', 'date glob utils record motor plugins') as $aClass) {
+	include PLX_CORE . 'lib/class.plx.' . $aClass . '.php';
+}
 
 # On impose le charset
 header('Content-Type: text/xml; charset='.PLX_CHARSET);
